--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -47,10 +47,10 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
-  background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
+  background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* Standard syntax (must be last) */
 //  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
 //  background-color:#F6F5F0;
   -webkit-box-shadow: 0px 8px 4px -6px #888888;
