--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,7 @@
           %script{src: "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"}
           %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"}
           %script{:src => "http://code.jquery.com/ui/1.11.4/jquery-ui.js"}
+          %script{:src => "https://maps.googleapis.com/maps/api/js"}
           %link{:href => "http://fonts.googleapis.com/css?family=PT+Sans+Narrow", :rel => "stylesheet", :type => "text/css"}
   %body
     = render partial: "layouts/navbar.html.haml"
