--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -5,6 +5,7 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
+  z-index: 1;
 //  background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
 //  background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
 //  background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
@@ -47,6 +48,7 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
+  z-index:1;
   background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #ecf0f1); /* For Firefox 3.6 to 15 */
