--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -200,6 +200,23 @@
 
     }
   }
+  .col-md-3{
+    .circle-border{
+      border:5px solid #F1F1F1;
+      width:100%;
+      height: 250px;
+      padding:10px;
+    }
+    .thumbnail{
+      background-color: inherit;
+      border: none;
+      box-shadow: none;
+    }
+    .caption{
+      text-align:center;
+      color: #F1F1F1;
+    }
+  }
 }
 
 .sixth-content-wrapper{
@@ -224,14 +241,18 @@
     .map-container-wrapper{
       background-color: #ecf0f1;
       padding-top:15px;
+      padding-bottom:25px;
       position:static;
+      .page-header h2{
+        text-align:center;
+      }
     }
-    .col-md-10{
+    .map-details-wrapper{
       #map-canvas{
         width: 100%;
         height: 400px;
         background-color: #CCC;
-        position: static !important;
+        border:5px solid #FFFFFF;
       }
     }
     .col-md-6{
@@ -246,6 +267,9 @@
           font-family: 'PT Sans Narrow', sans-serif;
           font-weight: bold;
         }
+      }
+      .col-md-12{
+        position: static;
       }
     }
     .contact-right-content{
@@ -265,6 +289,7 @@
       .col-md-8{
         margin-left:17%;
         text-align:center;
+        position: static;
         h3{
           font-family: 'PT Sans Narrow', sans-serif;
           color: #FFFFFF;
@@ -284,22 +309,7 @@
 .footer-content{
   background-color:#363B3F;
   padding-bottom: 50px;
-  .jumbotron{
-    margin-top:10px;
-  }
-  .custom-header-four{
-    padding-bottom: 60px;
-    margin-top:40px;
-    .page-header{
-      border-bottom: 1px solid #FFFFFF;
-    }
-    p{
-      text-align:center;
-      font-size:36px;
-      font-weight:bold;
-      font-family: 'PT Sans Narrow', sans-serif;
-      text-transform:capitalize;
-      color:#413F40;
-    }
+  color: #F1F1F1;
+  .container{
   }
 }
