--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -145,27 +145,26 @@
       .page-header
         %p= "BOOTSTRAP US"
   .container
-    %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-
-%div.fifth-content-wrapper
-  .container
-    .custom-header-four
-      .page-header
-        %p= "BOOTSTRAP US"
+    .col-md-10.tab-content-details
+      %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
   .container
     .row
-      .col-md-3
-        .thumbnail
-          =image_tag "face1.jpg", class: "img-circle img-responsive circle-border"
+      .col-md-6
+        .col-md-4
+          .thumbnail
+            =image_tag "face1.jpg", class: "img-responsive"
+        .col-md-8
           .caption
             %h3= "Person1"
             %p.lead= "Designation"
-      .col-md-3
+      .col-md-2
         .thumbnail
-          =image_tag "face2.jpg", class: "img-circle img-responsive circle-border"
-          .caption
-            %h3= "Person2"
-            %p.lead= "Designation"
+          =image_tag "face2.jpg", class: "img-responsive"
+      .col-md-4
+        .caption
+          %h3= "Person2"
+          %p.lead= "Designation"
+    .row
       .col-md-3
         .thumbnail
           =image_tag "face3.jpg", class: "img-circle img-responsive circle-border"
@@ -179,7 +178,7 @@
             %h3= "Person4"
             %p.lead= "Designation"
 
-%div.sixth-content-wrapper
+%div.fifth-content-wrapper
   .container
     .custom-header-four
       .page-header
@@ -208,7 +207,7 @@
     .col-md-6.contact-right-content
       .page-header
         %h2= "VISIT US"
-      .col-md-8
+      .col-md-12
         %form.form-horizontal
           %h3.comp-name= "Company Name"
           %p= "Building ,Floor no"
