--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -28,20 +28,20 @@
     });
   });
 
-%nav#navbar.navbar-container
-  .container
-    #navbar-logo.logo-container
-      =image_tag "comp-logo.png", class: "logo"
-    #navbar-content.nav-content-wrapper
-      %ul.navbar-ul
-        %li
-          %a{href: "#about",class: "active"} HOME
-        %li
-          %a{href: "#about"} WHAT WE DO
-        %li
-          %a{href: "#about"} PRODUCTS
-        %li
-          %a{href: "#about"} ABOUT US
-        %li
-          %a{href: "#about"} CONTACT US
-    .clear-class
+-#%nav#navbar.navbar-container
+-#  .container
+-#    #navbar-logo.logo-container
+-#      =image_tag "comp-logo.png", class: "logo"
+-#    #navbar-content.nav-content-wrapper
+-#      %ul.navbar-ul
+-#        %li
+-#          %a{href: "#about",class: "active"} HOME
+-#        %li
+-#          %a{href: "#about"} WHAT WE DO
+-#        %li
+-#          %a{href: "#about"} PRODUCTS
+-#        %li
+-#          %a{href: "#about"} ABOUT US
+-#        %li
+-#          %a{href: "#about"} CONTACT US
+-#    .clear-class
