--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,6 +1,15 @@
 // Place all the styles related to the homepage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.navbar-content-wrapper{
+  margin-top:350px;
+  .navbar{
+    background-image: none;
+    border-radius: 0px;
+    margin-bottom:0px;
+  }
+}
+
 .first-content-wrapper{
   margin-top:150px;
   .jumbotron{
@@ -11,7 +20,6 @@
 }
 .second-content-wrapper{
   background-color:#FAFAFA;
-  margin-top:350px;
   padding-bottom:50px;
   .custom-header-two{
     padding-bottom: 60px;
@@ -189,14 +197,37 @@
    text-align:center;
     margin-left:8%;
   }
-  .col-md-6{
-    padding: 0px;
-    .col-md-4{
-      padding: 0px;
+  .col-md-4{
+    .thumbnail{
+      -webkit-box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
+      -moz-box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
+      box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
+      .caption{
+        background-color: #DDDDDD;
+        h3{
+          background-color: #8D7358;
+          color: #F1F1F1;
+          padding:5px;
+          margin-bottom:0px;
+        }
+        p {
+          background-color: #413F40;
+          color: #F1F1F1;
+          padding:5px;
+          font-size:18px;
+          margin-bottom:0px;
+        }
+        .about-desc{
+          font-size:16px;
+          background-color: #555555;
+          color: #F1F1F1;
+        }
+      }
     }
-    .col-md-8{
-      background-color:#bfbfbf;
-    }
+  }
+
+  .team-main-container{
+    margin-top:40px;
   }
 }
 
