--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -68,12 +68,15 @@
           %span.icon-bar
         %a.navbar-brand{:href => "#"} Brand
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
-        %ul.nav.navbar-nav
-          %li.active
-            %a{:href => "#"}
-              Link
-              %span.sr-only (current)
         %ul.nav.navbar-nav.navbar-right
+          %li
+            %a{:href => "#"} Link
+          %li
+            %a{:href => "#"} Link
+          %li
+            %a{:href => "#"} Link
+          %li
+            %a{:href => "#"} Link
           %li
             %a{:href => "#"} Link
 %div.second-content-wrapper
