--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -363,9 +363,42 @@
         text-decoration:none;
         a{
           float:left;
-          margin-left:10px;
           font-size: 18px;
-          margin-left: 105px;
+          margin-left: 90px;
+          color: #F1F1F1;
+        }
+        a:hover{
+          color: #18bc9c;
+          text-decoration: none;
+        }
+      }
+    }
+    .social-media-icons-wrapper{
+      margin-top: 50px;
+      margin-left: 18%;
+      p{
+        width: 40%;
+        margin-top: 6px;
+        margin-left: 30px;
+        float: left;
+      }
+      ul{
+        padding:0px;
+        margin-top:0px;
+        border: none;
+        width: 50%;
+        float: left;
+        li{
+          list-style-type: none;
+          text-decoration:none;
+          a{
+            float:left;
+            margin-left:10px;
+            img{
+              width: 35px;
+              height: 35px;
+            }
+          }
         }
       }
     }
