--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -200,7 +200,7 @@
 .fourth-content-wrapper{
   background-color:#5E7C94;
   padding-bottom: 50px;
-  color:#F1F1F1;
+  color:#D5D8DF;
   .jumbotron{
     margin-top:10px;
   }
@@ -208,7 +208,7 @@
     padding-bottom: 60px;
     margin-top:40px;
     .page-header{
-      border-bottom: 1px solid #F1F1F1;
+      border-bottom: 1px solid #D5D8DF;
     }
     p{
       text-align:center;
@@ -228,13 +228,18 @@
       -webkit-box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
       -moz-box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
       box-shadow: 0px 0px 8px 2px rgba(35, 31, 32, 0.38);
+      background-color:#939393;
+      border:none;
       .caption{
         background-color: #DDDDDD;
+        padding:0px;
         h3{
-          background-color: #8D7358;
+          margin:0px;
+          background-color: #939393;
           color: #F1F1F1;
           padding:5px;
           margin-bottom:0px;
+          text-align: center;
         }
         p {
           background-color: #413F40;
@@ -242,11 +247,13 @@
           padding:5px;
           font-size:18px;
           margin-bottom:0px;
+          text-align: center;
         }
         .about-desc{
           font-size:16px;
           background-color: #555555;
           color: #F1F1F1;
+          text-align: center;
         }
       }
     }
